fixed mobile push menu not showing when faceted search filters screen is open * and fixed mobile menu showing below footer on short height pages * and turned off the "draggable" feature of snap.js

--- a/app/styles/components/th/_mobile-menu.scss
+++ b/app/styles/components/th/_mobile-menu.scss
@@ -1,3 +1,7 @@
+.snap-content {
+    background-color: white; //required to set a background color, otherwise the snap menu will show through content pages
+}
+
 .th-mobile-menu {
     border-right     : 1px solid map-get($colors, border);
     background-color : map-get($colors, component-bg);
